# agi1

./: .gitignore  AGENT_WORKFLOW.txt  AGENT_WORKFLOW_EXPLAINED.md  GEMINI_TOOL_CALLING_FIX.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  URL_VERIFICATION_LOCATIONS.md  WHY_RENDER_URL.md  WORKFLOW.md  main.py  pyproject.toml  test_agent.py
src/agi/: __init__.py  config.py  logging.py  row.ipynb
src/agi/agent/: __init__.py  agent_loop.py  link_validator.py  tool_schemas.py
src/agi/api/: main.py  models.py
src/agi/cache/: __init__.py  cache.py
src/agi/clients/: brave_client.py  browser_client.py  fetch_client.py  openrouter_client.py
src/agi/extract/: __init__.py  html_extract.py  page_classifier.py  product_extract.py  reference_extract.py  sku_extract.py  url_cleaner.py
tests/: test_agent_loop_output.py  test_page_classifier.py
